Add session management, QR code screen, upload progress, and web gallery
- Implement session database with DAOs and entities
- Add QR code generation and display functionality
- Add upload progress screen with status tracking
- Implement GIF processing and photo print adapter
- Add Supabase integration for data management
- Add new web gallery project with React and TypeScript
- Update UI themes and add new assets
- Refactor frame management and improve camera functionality

--- a/android-app/gradle/libs.versions.toml
+++ b/android-app/gradle/libs.versions.toml
@@ -24,7 +24,9 @@ lifecycleRuntimeKtx = "2.8.7"
 # External Libs
 usbCamera = "3.2.7"         # Library JiangDongGuo
 coil = "2.7.0"
-foundation = "1.9.4"              # Kita butuh ini untuk load image file nanti!
+foundation = "1.9.4"
+runtimeSaveable = "1.9.4"
+foundationVersion = "1.9.5"              # Kita butuh ini untuk load image file nanti!
 
 [libraries]
 # --- Core ---
@@ -57,6 +59,8 @@ androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-
 ausbc = { group = "com.github.jiangdongguo.AndroidUSBCamera", name = "libausbc", version.ref = "usbCamera" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
+androidx-compose-runtime-saveable = { group = "androidx.compose.runtime", name = "runtime-saveable", version.ref = "runtimeSaveable" }
+androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundationVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
