--- a/web-gallery/package.json
+++ b/web-gallery/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
