--- a/web-gallery/tsconfig.app.json
+++ b/web-gallery/tsconfig.app.json
@@ -17,9 +17,9 @@
     "jsx": "react-jsx",
 
     /* Path mapping */
-    "baseUrl": ".",
+    /* HAPUS "baseUrl": ".", */
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] 
     },
 
     /* Linting */
